updateing the package functions with a PVA function VarRep, and the default hclust method has been changed to average

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,7 @@
 
 export(Kcluster.groups)
 export(Kcluster_PVs)
-export(PVA)
-export(S22update)
+export(VarRep)
 export(iPVs)
 export(ind.pvs)
 export(tree.builder)
