updating README and NAMSPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(Kcluster_PVs)
 export(VarRep)
 export(iPVs)
 export(ind.pvs)
+export(pca.ab.data.Me)
 export(tree.builder)
 export(treecut.iterator.4minrho)
 export(treecut.pvs)
 export(treecut.sumstats)
+export(ztransform)
